--- a/composer.json
+++ b/composer.json
@@ -10,159 +10,171 @@
     ],
     "require": [],
     "conflict": {
-        "symfony/all-my-sms-notifier": "<7.0 || >=7.1",
-        "symfony/amazon-mailer": "<7.0 || >=7.1",
-        "symfony/amazon-sns-notifier": "<7.0 || >=7.1",
-        "symfony/amazon-sqs-messenger": "<7.0 || >=7.1",
-        "symfony/amqp-messenger": "<7.0 || >=7.1",
-        "symfony/asset": "<7.0 || >=7.1",
-        "symfony/asset-mapper": "<7.0 || >=7.1",
-        "symfony/bandwidth-notifier": "<7.0 || >=7.1",
-        "symfony/beanstalkd-messenger": "<7.0 || >=7.1",
-        "symfony/brevo-mailer": "<7.0 || >=7.1",
-        "symfony/brevo-notifier": "<7.0 || >=7.1",
-        "symfony/browser-kit": "<7.0 || >=7.1",
-        "symfony/cache": "<7.0 || >=7.1",
-        "symfony/chatwork-notifier": "<7.0 || >=7.1",
-        "symfony/click-send-notifier": "<7.0 || >=7.1",
-        "symfony/clickatell-notifier": "<7.0 || >=7.1",
-        "symfony/clock": "<7.0 || >=7.1",
-        "symfony/config": "<7.0 || >=7.1",
-        "symfony/console": "<7.0 || >=7.1",
-        "symfony/contact-everyone-notifier": "<7.0 || >=7.1",
-        "symfony/crowdin-translation-provider": "<7.0 || >=7.1",
-        "symfony/css-selector": "<7.0 || >=7.1",
-        "symfony/debug-bundle": "<7.0 || >=7.1",
-        "symfony/dependency-injection": "<7.0 || >=7.1",
-        "symfony/discord-notifier": "<7.0 || >=7.1",
-        "symfony/doctrine-bridge": "<7.0 || >=7.1",
-        "symfony/doctrine-messenger": "<7.0 || >=7.1",
-        "symfony/dom-crawler": "<7.0 || >=7.1",
-        "symfony/dotenv": "<7.0 || >=7.1",
-        "symfony/engagespot-notifier": "<7.0 || >=7.1",
-        "symfony/error-handler": "<7.0 || >=7.1",
-        "symfony/esendex-notifier": "<7.0 || >=7.1",
-        "symfony/event-dispatcher": "<7.0 || >=7.1",
-        "symfony/expo-notifier": "<7.0 || >=7.1",
-        "symfony/expression-language": "<7.0 || >=7.1",
-        "symfony/fake-chat-notifier": "<7.0 || >=7.1",
-        "symfony/fake-sms-notifier": "<7.0 || >=7.1",
-        "symfony/filesystem": "<7.0 || >=7.1",
-        "symfony/finder": "<7.0 || >=7.1",
-        "symfony/firebase-notifier": "<7.0 || >=7.1",
-        "symfony/form": "<7.0 || >=7.1",
-        "symfony/forty-six-elks-notifier": "<7.0 || >=7.1",
-        "symfony/framework-bundle": "<7.0 || >=7.1",
-        "symfony/free-mobile-notifier": "<7.0 || >=7.1",
-        "symfony/gateway-api-notifier": "<7.0 || >=7.1",
-        "symfony/gitter-notifier": "<7.0 || >=7.1",
-        "symfony/go-ip-notifier": "<7.0 || >=7.1",
-        "symfony/google-chat-notifier": "<7.0 || >=7.1",
-        "symfony/google-mailer": "<7.0 || >=7.1",
-        "symfony/html-sanitizer": "<7.0 || >=7.1",
-        "symfony/http-client": "<7.0 || >=7.1",
-        "symfony/http-foundation": "<7.0 || >=7.1",
-        "symfony/http-kernel": "<7.0 || >=7.1",
-        "symfony/infobip-mailer": "<7.0 || >=7.1",
-        "symfony/infobip-notifier": "<7.0 || >=7.1",
-        "symfony/intl": "<7.0 || >=7.1",
-        "symfony/iqsms-notifier": "<7.0 || >=7.1",
-        "symfony/isendpro-notifier": "<7.0 || >=7.1",
-        "symfony/kaz-info-teh-notifier": "<7.0 || >=7.1",
-        "symfony/ldap": "<7.0 || >=7.1",
-        "symfony/light-sms-notifier": "<7.0 || >=7.1",
-        "symfony/line-notify-notifier": "<7.0 || >=7.1",
-        "symfony/linked-in-notifier": "<7.0 || >=7.1",
-        "symfony/lock": "<7.0 || >=7.1",
-        "symfony/loco-translation-provider": "<7.0 || >=7.1",
-        "symfony/lokalise-translation-provider": "<7.0 || >=7.1",
-        "symfony/mail-pace-mailer": "<7.0 || >=7.1",
-        "symfony/mailchimp-mailer": "<7.0 || >=7.1",
-        "symfony/mailer": "<7.0 || >=7.1",
-        "symfony/mailer-send-mailer": "<7.0 || >=7.1",
-        "symfony/mailgun-mailer": "<7.0 || >=7.1",
-        "symfony/mailjet-mailer": "<7.0 || >=7.1",
-        "symfony/mailjet-notifier": "<7.0 || >=7.1",
-        "symfony/mastodon-notifier": "<7.0 || >=7.1",
-        "symfony/mattermost-notifier": "<7.0 || >=7.1",
-        "symfony/mercure-notifier": "<7.0 || >=7.1",
-        "symfony/message-bird-notifier": "<7.0 || >=7.1",
-        "symfony/message-media-notifier": "<7.0 || >=7.1",
-        "symfony/messenger": "<7.0 || >=7.1",
-        "symfony/microsoft-teams-notifier": "<7.0 || >=7.1",
-        "symfony/mime": "<7.0 || >=7.1",
-        "symfony/mobyt-notifier": "<7.0 || >=7.1",
-        "symfony/monolog-bridge": "<7.0 || >=7.1",
-        "symfony/notifier": "<7.0 || >=7.1",
-        "symfony/novu-notifier": "<7.0 || >=7.1",
-        "symfony/ntfy-notifier": "<7.0 || >=7.1",
-        "symfony/octopush-notifier": "<7.0 || >=7.1",
-        "symfony/one-signal-notifier": "<7.0 || >=7.1",
-        "symfony/options-resolver": "<7.0 || >=7.1",
-        "symfony/orange-sms-notifier": "<7.0 || >=7.1",
-        "symfony/ovh-cloud-notifier": "<7.0 || >=7.1",
-        "symfony/pager-duty-notifier": "<7.0 || >=7.1",
-        "symfony/password-hasher": "<7.0 || >=7.1",
-        "symfony/phrase-translation-provider": "<7.0 || >=7.1",
-        "symfony/plivo-notifier": "<7.0 || >=7.1",
-        "symfony/postmark-mailer": "<7.0 || >=7.1",
-        "symfony/process": "<7.0 || >=7.1",
-        "symfony/property-access": "<7.0 || >=7.1",
-        "symfony/property-info": "<7.0 || >=7.1",
-        "symfony/psr-http-message-bridge": "<7.0 || >=7.1",
-        "symfony/pushover-notifier": "<7.0 || >=7.1",
-        "symfony/rate-limiter": "<7.0 || >=7.1",
-        "symfony/redis-messenger": "<7.0 || >=7.1",
-        "symfony/redlink-notifier": "<7.0 || >=7.1",
-        "symfony/remote-event": "<7.0 || >=7.1",
-        "symfony/ring-central-notifier": "<7.0 || >=7.1",
-        "symfony/rocket-chat-notifier": "<7.0 || >=7.1",
-        "symfony/routing": "<7.0 || >=7.1",
-        "symfony/runtime": "<7.0 || >=7.1",
-        "symfony/scaleway-mailer": "<7.0 || >=7.1",
-        "symfony/scheduler": "<7.0 || >=7.1",
-        "symfony/security": "<7.0 || >=7.1",
-        "symfony/security-bundle": "<7.0 || >=7.1",
-        "symfony/security-core": "<7.0 || >=7.1",
-        "symfony/security-csrf": "<7.0 || >=7.1",
-        "symfony/security-http": "<7.0 || >=7.1",
-        "symfony/semaphore": "<7.0 || >=7.1",
-        "symfony/sendberry-notifier": "<7.0 || >=7.1",
-        "symfony/sendgrid-mailer": "<7.0 || >=7.1",
-        "symfony/serializer": "<7.0 || >=7.1",
-        "symfony/simple-textin-notifier": "<7.0 || >=7.1",
-        "symfony/sinch-notifier": "<7.0 || >=7.1",
-        "symfony/slack-notifier": "<7.0 || >=7.1",
-        "symfony/sms-biuras-notifier": "<7.0 || >=7.1",
-        "symfony/sms-factor-notifier": "<7.0 || >=7.1",
-        "symfony/sms77-notifier": "<7.0 || >=7.1",
-        "symfony/smsapi-notifier": "<7.0 || >=7.1",
-        "symfony/smsc-notifier": "<7.0 || >=7.1",
-        "symfony/smsmode-notifier": "<7.0 || >=7.1",
-        "symfony/spot-hit-notifier": "<7.0 || >=7.1",
-        "symfony/stopwatch": "<7.0 || >=7.1",
-        "symfony/string": "<7.0 || >=7.1",
-        "symfony/telegram-notifier": "<7.0 || >=7.1",
-        "symfony/telnyx-notifier": "<7.0 || >=7.1",
-        "symfony/termii-notifier": "<7.0 || >=7.1",
-        "symfony/translation": "<7.0 || >=7.1",
-        "symfony/turbo-sms-notifier": "<7.0 || >=7.1",
-        "symfony/twig-bridge": "<7.0 || >=7.1",
-        "symfony/twig-bundle": "<7.0 || >=7.1",
-        "symfony/twilio-notifier": "<7.0 || >=7.1",
-        "symfony/twitter-notifier": "<7.0 || >=7.1",
-        "symfony/uid": "<7.0 || >=7.1",
-        "symfony/validator": "<7.0 || >=7.1",
-        "symfony/var-dumper": "<7.0 || >=7.1",
-        "symfony/var-exporter": "<7.0 || >=7.1",
-        "symfony/vonage-notifier": "<7.0 || >=7.1",
-        "symfony/web-link": "<7.0 || >=7.1",
-        "symfony/web-profiler-bundle": "<7.0 || >=7.1",
-        "symfony/webhook": "<7.0 || >=7.1",
-        "symfony/workflow": "<7.0 || >=7.1",
-        "symfony/yaml": "<7.0 || >=7.1",
-        "symfony/yunpian-notifier": "<7.0 || >=7.1",
-        "symfony/zendesk-notifier": "<7.0 || >=7.1",
-        "symfony/zulip-notifier": "<7.0 || >=7.1"
+        "symfony/all-my-sms-notifier": "<7.1 || >=7.2",
+        "symfony/amazon-mailer": "<7.1 || >=7.2",
+        "symfony/amazon-sns-notifier": "<7.1 || >=7.2",
+        "symfony/amazon-sqs-messenger": "<7.1 || >=7.2",
+        "symfony/amqp-messenger": "<7.1 || >=7.2",
+        "symfony/asset": "<7.1 || >=7.2",
+        "symfony/asset-mapper": "<7.1 || >=7.2",
+        "symfony/azure-mailer": "<7.1 || >=7.2",
+        "symfony/bandwidth-notifier": "<7.1 || >=7.2",
+        "symfony/beanstalkd-messenger": "<7.1 || >=7.2",
+        "symfony/bluesky-notifier": "<7.1 || >=7.2",
+        "symfony/brevo-mailer": "<7.1 || >=7.2",
+        "symfony/brevo-notifier": "<7.1 || >=7.2",
+        "symfony/browser-kit": "<7.1 || >=7.2",
+        "symfony/cache": "<7.1 || >=7.2",
+        "symfony/chatwork-notifier": "<7.1 || >=7.2",
+        "symfony/click-send-notifier": "<7.1 || >=7.2",
+        "symfony/clickatell-notifier": "<7.1 || >=7.2",
+        "symfony/clock": "<7.1 || >=7.2",
+        "symfony/config": "<7.1 || >=7.2",
+        "symfony/console": "<7.1 || >=7.2",
+        "symfony/contact-everyone-notifier": "<7.1 || >=7.2",
+        "symfony/crowdin-translation-provider": "<7.1 || >=7.2",
+        "symfony/css-selector": "<7.1 || >=7.2",
+        "symfony/debug-bundle": "<7.1 || >=7.2",
+        "symfony/dependency-injection": "<7.1 || >=7.2",
+        "symfony/discord-notifier": "<7.1 || >=7.2",
+        "symfony/doctrine-bridge": "<7.1 || >=7.2",
+        "symfony/doctrine-messenger": "<7.1 || >=7.2",
+        "symfony/dom-crawler": "<7.1 || >=7.2",
+        "symfony/dotenv": "<7.1 || >=7.2",
+        "symfony/emoji": "<7.1 || >=7.2",
+        "symfony/engagespot-notifier": "<7.1 || >=7.2",
+        "symfony/error-handler": "<7.1 || >=7.2",
+        "symfony/esendex-notifier": "<7.1 || >=7.2",
+        "symfony/event-dispatcher": "<7.1 || >=7.2",
+        "symfony/expo-notifier": "<7.1 || >=7.2",
+        "symfony/expression-language": "<7.1 || >=7.2",
+        "symfony/fake-chat-notifier": "<7.1 || >=7.2",
+        "symfony/fake-sms-notifier": "<7.1 || >=7.2",
+        "symfony/filesystem": "<7.1 || >=7.2",
+        "symfony/finder": "<7.1 || >=7.2",
+        "symfony/firebase-notifier": "<7.1 || >=7.2",
+        "symfony/form": "<7.1 || >=7.2",
+        "symfony/forty-six-elks-notifier": "<7.1 || >=7.2",
+        "symfony/framework-bundle": "<7.1 || >=7.2",
+        "symfony/free-mobile-notifier": "<7.1 || >=7.2",
+        "symfony/gateway-api-notifier": "<7.1 || >=7.2",
+        "symfony/gitter-notifier": "<7.1 || >=7.2",
+        "symfony/go-ip-notifier": "<7.1 || >=7.2",
+        "symfony/google-chat-notifier": "<7.1 || >=7.2",
+        "symfony/google-mailer": "<7.1 || >=7.2",
+        "symfony/html-sanitizer": "<7.1 || >=7.2",
+        "symfony/http-client": "<7.1 || >=7.2",
+        "symfony/http-foundation": "<7.1 || >=7.2",
+        "symfony/http-kernel": "<7.1 || >=7.2",
+        "symfony/infobip-mailer": "<7.1 || >=7.2",
+        "symfony/infobip-notifier": "<7.1 || >=7.2",
+        "symfony/intl": "<7.1 || >=7.2",
+        "symfony/iqsms-notifier": "<7.1 || >=7.2",
+        "symfony/isendpro-notifier": "<7.1 || >=7.2",
+        "symfony/kaz-info-teh-notifier": "<7.1 || >=7.2",
+        "symfony/ldap": "<7.1 || >=7.2",
+        "symfony/light-sms-notifier": "<7.1 || >=7.2",
+        "symfony/line-notify-notifier": "<7.1 || >=7.2",
+        "symfony/linked-in-notifier": "<7.1 || >=7.2",
+        "symfony/lock": "<7.1 || >=7.2",
+        "symfony/loco-translation-provider": "<7.1 || >=7.2",
+        "symfony/lokalise-translation-provider": "<7.1 || >=7.2",
+        "symfony/lox24-notifier": "<7.1 || >=7.2",
+        "symfony/mail-pace-mailer": "<7.1 || >=7.2",
+        "symfony/mailchimp-mailer": "<7.1 || >=7.2",
+        "symfony/mailer": "<7.1 || >=7.2",
+        "symfony/mailer-send-mailer": "<7.1 || >=7.2",
+        "symfony/mailgun-mailer": "<7.1 || >=7.2",
+        "symfony/mailjet-mailer": "<7.1 || >=7.2",
+        "symfony/mailjet-notifier": "<7.1 || >=7.2",
+        "symfony/mastodon-notifier": "<7.1 || >=7.2",
+        "symfony/mattermost-notifier": "<7.1 || >=7.2",
+        "symfony/mercure-notifier": "<7.1 || >=7.2",
+        "symfony/message-bird-notifier": "<7.1 || >=7.2",
+        "symfony/message-media-notifier": "<7.1 || >=7.2",
+        "symfony/messenger": "<7.1 || >=7.2",
+        "symfony/microsoft-teams-notifier": "<7.1 || >=7.2",
+        "symfony/mime": "<7.1 || >=7.2",
+        "symfony/mobyt-notifier": "<7.1 || >=7.2",
+        "symfony/monolog-bridge": "<7.1 || >=7.2",
+        "symfony/notifier": "<7.1 || >=7.2",
+        "symfony/novu-notifier": "<7.1 || >=7.2",
+        "symfony/ntfy-notifier": "<7.1 || >=7.2",
+        "symfony/octopush-notifier": "<7.1 || >=7.2",
+        "symfony/one-signal-notifier": "<7.1 || >=7.2",
+        "symfony/options-resolver": "<7.1 || >=7.2",
+        "symfony/orange-sms-notifier": "<7.1 || >=7.2",
+        "symfony/ovh-cloud-notifier": "<7.1 || >=7.2",
+        "symfony/pager-duty-notifier": "<7.1 || >=7.2",
+        "symfony/password-hasher": "<7.1 || >=7.2",
+        "symfony/phrase-translation-provider": "<7.1 || >=7.2",
+        "symfony/plivo-notifier": "<7.1 || >=7.2",
+        "symfony/postmark-mailer": "<7.1 || >=7.2",
+        "symfony/process": "<7.1 || >=7.2",
+        "symfony/property-access": "<7.1 || >=7.2",
+        "symfony/property-info": "<7.1 || >=7.2",
+        "symfony/psr-http-message-bridge": "<7.1 || >=7.2",
+        "symfony/pushover-notifier": "<7.1 || >=7.2",
+        "symfony/pushy-notifier": "<7.1 || >=7.2",
+        "symfony/rate-limiter": "<7.1 || >=7.2",
+        "symfony/redis-messenger": "<7.1 || >=7.2",
+        "symfony/redlink-notifier": "<7.1 || >=7.2",
+        "symfony/remote-event": "<7.1 || >=7.2",
+        "symfony/resend-mailer": "<7.1 || >=7.2",
+        "symfony/ring-central-notifier": "<7.1 || >=7.2",
+        "symfony/rocket-chat-notifier": "<7.1 || >=7.2",
+        "symfony/routing": "<7.1 || >=7.2",
+        "symfony/runtime": "<7.1 || >=7.2",
+        "symfony/scaleway-mailer": "<7.1 || >=7.2",
+        "symfony/scheduler": "<7.1 || >=7.2",
+        "symfony/security": "<7.1 || >=7.2",
+        "symfony/security-bundle": "<7.1 || >=7.2",
+        "symfony/security-core": "<7.1 || >=7.2",
+        "symfony/security-csrf": "<7.1 || >=7.2",
+        "symfony/security-http": "<7.1 || >=7.2",
+        "symfony/semaphore": "<7.1 || >=7.2",
+        "symfony/sendberry-notifier": "<7.1 || >=7.2",
+        "symfony/sendgrid-mailer": "<7.1 || >=7.2",
+        "symfony/serializer": "<7.1 || >=7.2",
+        "symfony/sevenio-notifier": "<7.1 || >=7.2",
+        "symfony/simple-textin-notifier": "<7.1 || >=7.2",
+        "symfony/sinch-notifier": "<7.1 || >=7.2",
+        "symfony/slack-notifier": "<7.1 || >=7.2",
+        "symfony/sms-biuras-notifier": "<7.1 || >=7.2",
+        "symfony/sms-factor-notifier": "<7.1 || >=7.2",
+        "symfony/sms-sluzba-notifier": "<7.1 || >=7.2",
+        "symfony/sms77-notifier": "<7.1 || >=7.2",
+        "symfony/smsapi-notifier": "<7.1 || >=7.2",
+        "symfony/smsbox-notifier": "<7.1 || >=7.2",
+        "symfony/smsc-notifier": "<7.1 || >=7.2",
+        "symfony/smsense-notifier": "<7.1 || >=7.2",
+        "symfony/smsmode-notifier": "<7.1 || >=7.2",
+        "symfony/spot-hit-notifier": "<7.1 || >=7.2",
+        "symfony/stopwatch": "<7.1 || >=7.2",
+        "symfony/string": "<7.1 || >=7.2",
+        "symfony/telegram-notifier": "<7.1 || >=7.2",
+        "symfony/telnyx-notifier": "<7.1 || >=7.2",
+        "symfony/termii-notifier": "<7.1 || >=7.2",
+        "symfony/translation": "<7.1 || >=7.2",
+        "symfony/turbo-sms-notifier": "<7.1 || >=7.2",
+        "symfony/twig-bridge": "<7.1 || >=7.2",
+        "symfony/twig-bundle": "<7.1 || >=7.2",
+        "symfony/twilio-notifier": "<7.1 || >=7.2",
+        "symfony/twitter-notifier": "<7.1 || >=7.2",
+        "symfony/type-info": "<7.1 || >=7.2",
+        "symfony/uid": "<7.1 || >=7.2",
+        "symfony/unifonic-notifier": "<7.1 || >=7.2",
+        "symfony/validator": "<7.1 || >=7.2",
+        "symfony/var-dumper": "<7.1 || >=7.2",
+        "symfony/var-exporter": "<7.1 || >=7.2",
+        "symfony/vonage-notifier": "<7.1 || >=7.2",
+        "symfony/web-link": "<7.1 || >=7.2",
+        "symfony/web-profiler-bundle": "<7.1 || >=7.2",
+        "symfony/webhook": "<7.1 || >=7.2",
+        "symfony/workflow": "<7.1 || >=7.2",
+        "symfony/yaml": "<7.1 || >=7.2",
+        "symfony/yunpian-notifier": "<7.1 || >=7.2",
+        "symfony/zendesk-notifier": "<7.1 || >=7.2",
+        "symfony/zulip-notifier": "<7.1 || >=7.2"
     }
 }
